frontend/test/should_fail/index_exec_multiple_model.gm
node class N
{
	i : int;
	d : double;
}

edge class E
{
	i : int;
	d : double;
}

index fooi { N.i }
index bari { E.i }

index food { N.d }
index bard { E.d }
